# sdk

./: go.mod  go.sum
defaults/: defaults.go
defaults/vectors/: pET21-PaqCI-no_rbs.txt
models/: experiments.go
pb/: gen.sh  pyproject.toml
pb/nanala/v1/: nanala.proto
py/: nanala.py  pyproject.toml
py/examples/: basic.py  pooled.py
py/lib/nanala/: v1.py
