[tool.poetry]
name = "nanala-sdk"
version = "0.1.0"
description = ""
authors = ["Keoni Gandall <koeng101@gmail.com>"]
readme = "README.md"
packages = [{include = "nanala_sdk"}]

[tool.poetry.dependencies]
python = "^3.11"
betterproto = "^1.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
